--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,3 +85,14 @@ li {
     --ring: 216 12.2% 83.9%;
   }
 }
+
+
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
